Alteração feita por Breno

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 </head>
 <body>
     <h2>Pedro</h2>
+    <p>Olá, eu sou o Pedro!</p>
+    <p>Eu sou um desenvolvedor web e estou aqui para aprender e melhorar
     <p id="date"></p>
     <script src="js/script.js"></script>
 </body>
