--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <h2>Pedro</h2>
     <p>Olá, eu sou o Pedro!</p>
     <p>Eu sou um desenvolvedor web e estou aqui para aprender e melhorar
+    <h2>
+        Alteração: <span id="nome-alteracao">Pedro</span>
+    </h2>
     <p id="date"></p>
     <script src="js/script.js"></script>
 </body>
